--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">DiyDialog</string>
     <string name="action_settings">Settings</string>
+    <string name="normal_dialog_two_content">Settings</string>
+
 </resources>
