--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,13 @@
     <string name="action_settings">Settings</string>
 
 
-    <string name="normal_dialog_two_content">为保证咖啡豆的新鲜度和咖啡的香味，并配以特有的传统烘焙和手工冲。</string>
-    <string name="normal_dialog_custome_attr">是否确定退出程序</string>
-    <string name="normal_dialog_btn_content">您今天的名额已用完</string>
-    <string name="normal_dialog_btn_1">取消</string>
-    <string name="normal_dialog_btn_2">确定</string>
-    <string name="normal_dialog_btn_3">继续逛逛</string>
+    <string name="content_one">为保证咖啡豆的新鲜度和咖啡的香味，并配以特有的传统烘焙和手工冲。</string>
+    <string name="content_two">您今天的名额已用完</string>
+    <string name="content_three">是否确定退出程序</string>
+
+    <string name="btn_left">取消</string>
+    <string name="btn_right">确定</string>
+    <string name="btn_middle">继续逛逛</string>
+    <string name="btn_middle_1">知道了</string>
 
 </resources>
